--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -7,6 +7,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   width: 200px;
+  gap: 4px;
 }
 
 .screen {
@@ -25,6 +26,7 @@
   text-align: center;
   border: 1px solid rgb(241, 237, 236);
   transition: 0.5s ease;
+  cursor: pointer;
 }
 
 .btn:hover {
