--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -5,10 +7,15 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: #fafafa;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.945);
+}
+
+ul {
+  list-style: none;
 }
